1、完成药品物资模块（查询、分页、新增、编辑、启用） 2、完成诊所管理（查询、修改） 3、完成员工管理（查询、修改、新增、删除）

--- a/zft-adapter/src/main/resources/static/css/zft.css
+++ b/zft-adapter/src/main/resources/static/css/zft.css
@@ -921,6 +921,7 @@ tr:hover .td-hover{
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
     float: left;
+    overflow: auto;
 }
 
 .manage .right .info .info-left .title{
