--- a/zft-adapter/src/main/resources/templates/inventory/inventoryIn.html
+++ b/zft-adapter/src/main/resources/templates/inventory/inventoryIn.html
@@ -14,7 +14,7 @@
         </div>
         <div class="right">
             <div class="top">
-                <form ref="form1" @submit.prevent="selectInventoryInSubmit">
+                <form ref="form1">
                     <div class="form-group" style="float: left;width: 150px;margin-right: 15px;">
                         <select class="form-control" name="inventoryInStatus" v-model="InventoryInListQuery.inventoryInStatus">
                             <option value="">全部状态</option>
@@ -30,7 +30,7 @@
                     </div>
                     <div style="float: left;margin-right: 15px;">
                         <div class="layui-inline">
-                            <div class="layui-inline" id="test6">
+                            <div class="layui-inline" id="test1">
                                 <div class="layui-input-inline float-left" style="width: 100px;">
                                     <input type="text" autocomplete="off" id="test-startDate-1" v-model="InventoryInListQuery.inventoryInBeginTime" class="layui-input" name="inventoryInBeginTime" style="border: 1px rgb(206,212,218) solid" readonly placeholder="开始日期">
                                 </div>
@@ -54,7 +54,7 @@
                         </select>
                     </div>
                     <div style="float: left;">
-                        <button type="submit" class="btn btn-outline-primary">查询</button>
+                        <button type="button" class="btn btn-outline-primary" v-on:click="refresh">查询</button>
                     </div>
                 </form>
                 <div style="float: right;margin-left: 15px;">
@@ -436,34 +436,6 @@
                 }
             },
             methods: {
-                // 入库单一览查询请求
-                selectInventoryInSubmit(event){
-                    // 防止回调中this指向ajax回调函数本身导致失效
-                    let that = this;
-                    // 阻止表单默认提交行为
-                    event.preventDefault();
-                    // 创建FormData对象
-                    $.ajax({
-                        url: '/inventory/toInventoryInByQuery',
-                        type: 'POST',
-                        data: JSON.stringify(this.InventoryInListQuery),
-                        contentType: 'application/json',
-                        success: function (response) {
-                            // 先清空上一次数据再push
-                            that.inventoryInList.splice(0, that.inventoryInList.length);
-                            response.inDTOList.forEach((item) => {
-                                that.inventoryInList.push(item);
-                            });
-                            that.pageData.pageIndex = that.InventoryInListQuery.pageIndex;
-                            that.pageData.pageSize = that.InventoryInListQuery.pageSize;
-                            that.pageData.total = response.total;
-                            that.pageData.maxPage = response.maxPage;
-                        },
-                        error:function () {
-                            layer.msg('请求入库单一览查询失败，请刷新重试');
-                        }
-                    })
-                },
                 // 查看入库单详情
                 detailed(id){
                     // 防止回调中this指向ajax回调函数本身导致失效
@@ -695,7 +667,7 @@
                     }
                     this.InventoryInListQuery.pageIndex = this.pageData.pageIndex;
                     this.refresh();
-                }
+                },
             },
             computed: {
                 // 计算新增入库单总金额
@@ -753,19 +725,23 @@
                     error:function () {
                         layer.msg('请求入库人列表失败，请刷新重试');
                     }
+                });
+                layui.use('laydate', function(){
+                    var laydate = layui.laydate;
+                    //日期范围
+                    laydate.render({
+                        elem: '#test1',
+                        //设置开始日期、日期日期的 input 选择器
+                        //数组格式为 2.6.6 开始新增，之前版本直接配置 true 或任意分割字符即可
+                        range: ['#test-startDate-1', '#test-endDate-1'],
+                        done: function (value) {
+                            let dataStr = value.toString().split(" - ");
+                            that.InventoryInListQuery.inventoryInBeginTime = dataStr[0];
+                            that.InventoryInListQuery.inventoryInEndTime = dataStr[1];
+                        }
+                    });
                 })
             }
-        });
-
-        layui.use('laydate', function(){
-            var laydate = layui.laydate;
-            //日期范围
-            laydate.render({
-                elem: '#test6'
-                //设置开始日期、日期日期的 input 选择器
-                //数组格式为 2.6.6 开始新增，之前版本直接配置 true 或任意分割字符即可
-                ,range: ['#test-startDate-1', '#test-endDate-1']
-            });
         });
     </script>
 </body>
