--- a/zft-adapter/src/main/resources/templates/manage/manageClinic.html
+++ b/zft-adapter/src/main/resources/templates/manage/manageClinic.html
@@ -7,7 +7,7 @@
 </head>
 <body style="background-color: rgb(225,228,232);">
 <div th:replace="~{common/common::headbar}"/>
-<div class="manage">
+<div class="manage" id="manageClinic">
     <div class="left">
         <div th:replace="~{common/common::manageMeau}"/>
     </div>
@@ -24,7 +24,7 @@
             <div class="title">
                 <p>诊所信息</p>
                 <div style="float: right;">
-                    <button type="button" class="btn btn-primary">保存</button>
+                    <button type="button" class="btn btn-primary" v-on:click="save">保存</button>
                 </div>
             </div>
             <div class="input">
@@ -32,13 +32,13 @@
                     诊所编码
                 </div>
                 <div class="form-group" style="float: left;width: 400px;margin-right: 50px;">
-                    <input type="text" class="form-control" name="" placeholder="请输入诊所编码">
+                    <input type="text" class="form-control" v-model="tenantInfo.tenantId" name="" placeholder="请输入诊所编码" readonly>
                 </div>
                 <div class="text">
                     <span style="color: red;">* </span>诊所名称
                 </div>
                 <div class="form-group" style="float: left;width: 400px;">
-                    <input type="text" class="form-control" name="" placeholder="请输入诊所名称">
+                    <input type="text" class="form-control" v-model="tenantInfo.tenantName" name="" placeholder="请输入诊所名称">
                 </div>
             </div>
             <div class="input">
@@ -46,13 +46,13 @@
                     内部简称
                 </div>
                 <div class="form-group" style="float: left;width: 400px;margin-right: 50px;">
-                    <input type="text" class="form-control" name="" placeholder="请输入内部简称">
+                    <input type="text" class="form-control" v-model="tenantInfo.tenantAbbreviation" name="" placeholder="请输入内部简称">
                 </div>
                 <div class="text">
                     联系电话
                 </div>
                 <div class="form-group" style="float: left;width: 400px;">
-                    <input type="text" class="form-control" name="" placeholder="请输入联系电话">
+                    <input type="text" class="form-control" v-model="tenantInfo.tenantTel" name="" placeholder="请输入联系电话">
                 </div>
             </div>
             <div class="input">
@@ -60,20 +60,34 @@
                     营业面积(平方米)
                 </div>
                 <div class="form-group" style="float: left;width: 400px;margin-right: 50px;">
-                    <input type="text" class="form-control" name="" placeholder="请输入营业面积">
+                    <input type="text" class="form-control" v-model="tenantInfo.tenantSize" name="" placeholder="请输入营业面积">
                 </div>
                 <div class="text">
                     诊所地址
                 </div>
                 <div class="form-group" style="float: left;width: 400px;">
-                    <input type="text" class="form-control" name="" placeholder="请输入诊所地址">
+                    <input type="text" class="form-control" v-model="tenantInfo.tenantAddress" name="" placeholder="请输入诊所地址">
                 </div>
             </div>
             <div class="input">
                 <div class="text">
+                    诊所开设时间
+                </div>
+                <div class="form-group" style="float: left;width: 400px;margin-right: 50px;">
+                    <input type="text" class="form-control" v-model="tenantInfo.tenantBeginTime" name="" placeholder="请输入诊所开设时间">
+                </div>
+                <div class="text">
                     诊所评级
                 </div>
                 <div id="test1"></div>
+            </div>
+            <div class="input">
+                <div class="text">
+                    诊所介绍
+                </div>
+                <div style="float: left;width: 1030px;">
+                    <textarea class="form-control" v-model="tenantInfo.tenantIntroduce" style="resize:none;" rows="5" placeholder="请输入诊所介绍"></textarea>
+                </div>
             </div>
         </div>
         <hr>
@@ -86,13 +100,13 @@
                     <span style="color:red;">* </span>法定代表人姓名
                 </div>
                 <div class="form-group" style="float: left;width: 400px;margin-right: 50px;">
-                    <input type="text" class="form-control" name="" placeholder="请输入法定代表人姓名">
+                    <input type="text" v-model="tenantInfo.tenantLegalName" class="form-control" placeholder="请输入法定代表人姓名">
                 </div>
                 <div class="text">
                     <span style="color:red;">* </span>法定代表人身份证号
                 </div>
                 <div class="form-group" style="float: left;width: 400px;margin-right: 50px;">
-                    <input type="text" class="form-control" name="" placeholder="请输入法定代表人身份证号">
+                    <input type="text" v-model="tenantInfo.tenantLegalNumber" class="form-control" name="" placeholder="请输入法定代表人身份证号">
                 </div>
             </div>
             <div class="input">
@@ -100,13 +114,13 @@
                     执业许可证号
                 </div>
                 <div class="form-group" style="float: left;width: 400px;margin-right: 50px;">
-                    <input type="text" class="form-control" name="" placeholder="请输入执业许可证号">
+                    <input type="text" v-model="tenantInfo.tenantLicenseKey" class="form-control" name="" placeholder="请输入执业许可证号">
                 </div>
                 <div class="text">
                     <span style="color:red;">* </span>统一社会信用代码
                 </div>
                 <div class="form-group" style="float: left;width: 400px;margin-right: 50px;">
-                    <input type="text" class="form-control" name="" placeholder="请输入统一社会信用代码">
+                    <input type="text" v-model="tenantInfo.tenantCreditCode" class="form-control" name="" placeholder="请输入统一社会信用代码">
                 </div>
             </div>
             <div class="input">
@@ -114,13 +128,13 @@
                     机构国家编码
                 </div>
                 <div class="form-group" style="float: left;width: 400px;margin-right: 50px;">
-                    <input type="text" class="form-control" name="" placeholder="H51010414" readonly>
+                    <input type="text" v-model="tenantInfo.tenantCountryCode" class="form-control" placeholder="H51010414" readonly>
                 </div>
                 <div class="text">
                     备注
                 </div>
                 <div class="form-group" style="float: left;width: 400px;margin-right: 50px;">
-                    <input type="text" class="form-control" name="" placeholder="请输入备注">
+                    <input type="text" v-model="tenantInfo.tenantRemarks" class="form-control" name="" placeholder="请输入备注">
                 </div>
             </div>
         </div>
@@ -128,15 +142,90 @@
 </div>
 
 <script>
-    layui.use(['rate'], function() {
-        var rate = layui.rate;
-        //半星效果
-        rate.render({
-            elem: '#test1'
-            , value: 4.5 //初始值
-            , half: true //开启半星
-            , readonly: true //只可读
-        });
+    let vm = new Vue({
+        el: "#manageClinic",
+        data: {
+           tenantInfo:{
+               tenantId: '',
+               tenantName: '',
+               tenantAbbreviation: '',
+               tenantTel: '',
+               tenantSize: '',
+               tenantAddress: '',
+               tenantBeginTime: '',
+               tenantIntroduce: '',
+               tenantRate: '',
+               tenantLegalName: '',
+               tenantLegalNumber: '',
+               tenantLicenseKey: '',
+               tenantCreditCode: '',
+               tenantCountryCode: '',
+               tenantRemarks: '',
+           }
+        },
+        methods: {
+            // 保存诊所信息
+            save(){
+                if(this.tenantInfo.tenantName === ''){
+                    layer.msg('诊所名称不能为空');
+                    return;
+                }
+                if(this.tenantInfo.tenantLegalName === ''){
+                    layer.msg('法定代表人姓名不能为空');
+                    return;
+                }
+                if(this.tenantInfo.tenantLegalNumber === ''){
+                    layer.msg('法定代表人身份证号不能为空');
+                    return;
+                }
+                if(this.tenantInfo.tenantCreditCode === ''){
+                    layer.msg('统一社会信用代码不能为空');
+                    return;
+                }
+                $.ajax({
+                    url: '/tenant/saveTenant',
+                    type: 'POST',
+                    data: JSON.stringify(this.tenantInfo),
+                    contentType: 'application/json',
+                    success: function (response) {
+                        layer.msg('保存成功');
+                    },
+                    error: function () {
+                        layer.msg('保存失败');
+                    }
+                });
+            },
+            // 获取诊所信息
+            refresh(){
+                let that = this;
+                $.ajax({
+                    url: '/tenant/getTenantInfo',
+                    type: 'GET',
+                    success: function (response) {
+                        that.tenantInfo = response;
+                        // 渲染诊所等级
+                        layui.use(['rate'], function() {
+                            var rate = layui.rate;
+                            rate.render({
+                                elem: '#test1',
+                                value: that.tenantInfo.tenantRate,
+                                half: true,
+                                readonly: true,
+                            });
+                        });
+                    },
+                    error: function () {
+                        layer.msg('获取诊所信息失败，请刷新重试');
+                    }
+                });
+            }
+        },
+        computed: {
+
+        },
+        mounted(){
+            this.refresh();
+        },
     });
 </script>
 </body>
