--- a/zft-adapter/src/main/resources/static/css/zft.css
+++ b/zft-adapter/src/main/resources/static/css/zft.css
@@ -86,6 +86,7 @@ body{
     margin: 0 auto;
     text-align: center;
     color: #3c3f41;
+    top: 10px;
 }
 
 .svg-text{
@@ -1048,6 +1049,47 @@ tr:hover .td-hover{
 .manage .right .info .div2 .title2{
     width: 85%;
     float: left;
+}
+
+.manage .emp{
+    width: 200px;
+    height: 400px;
+    z-index: 900;
+    position: fixed;
+    top: 250px;
+    left: 800px;
+    background-color: #FFFFFF;
+    border-radius: 5px;
+    display: none;
+}
+
+.manage .emp .emp2{
+    padding: 10px 10px 10px 10px;
+    font-size: 16px;
+}
+
+.manage .emp .emp2 .head{
+    border-bottom: 1px rgb(206,212,218) solid;
+    height: 40px;
+}
+
+.manage .emp .emp2 .bottom{
+    height: 360px;
+    overflow: auto;
+}
+
+.manage .emp .emp2 .bottom .name{
+    width: 100%;
+    height: 40px;
+    padding: 12px 10px 12px 10px;
+    font-size: 16px;
+    border-bottom: 1px #cfd5d7 solid;
+    float: left;
+}
+
+.manage .emp .emp2 .bottom .name:hover{
+    color: rgb(54,85,204);
+    background-color: rgb(212,218,240);
 }
 
 .patient{
