--- a/zft-adapter/src/main/resources/templates/inventory/inventoryCheck.html
+++ b/zft-adapter/src/main/resources/templates/inventory/inventoryCheck.html
@@ -44,7 +44,7 @@
                 <div class="form-group" style="float: left;width: 140px;margin-right: 15px;">
                     <select class="form-control" v-model="InventoryCheckListQuery.inventoryCheckOperatorId" name="inventoryCheckOperatorId">
                         <option value="">全部盘点人</option>
-                        <option v-for="account in accountList" :value="account.accountId">{{ account.accountName }}</option>
+                        <option v-for="employee in employeeList" :value="employee.employeeId">{{ employee.employeeName }}</option>
                     </select>
                 </div>
                 <div style="float: left;">
@@ -135,7 +135,7 @@
                 <div class="form-group" style="float: left;width: 140px;margin-right: 30px;">
                     <select class="form-control" name="inventoryCheckOperatorId" v-model="inventoryCheckAdd.inventoryCheckOperatorId">
                         <option value="" style="display: none">请选择盘点人</option>
-                        <option v-for="account in accountList" :value="account.accountId">{{ account.accountName }}</option>
+                        <option v-for="employee in employeeList" :value="employee.employeeId">{{ employee.employeeName }}</option>
                     </select>
                 </div>
                 <p>备注</p>
@@ -321,9 +321,9 @@
                 pageIndex: 1,
             },
             // 盘点人列表
-            accountList: [{
-                accountId: '',
-                accountName: '',
+            employeeList: [{
+                employeeId: '',
+                employeeName: '',
             }],
             // 盘点单列表
             inventoryCheckList: [{
@@ -641,7 +641,7 @@
         mounted() {
             // 先清空所有data的list，因为初始定义格式为一个全是空值的list
             this.inventoryCheckList.splice(0, this.inventoryCheckList.length);
-            this.accountList.splice(0, this.accountList.length);
+            this.employeeList.splice(0, this.employeeList.length);
             this.inventoryList.splice(0, this.inventoryList.length);
             this.inventoryCheckAdd.inventoryCheckDetailList.splice(0, this.inventoryCheckAdd.inventoryCheckDetailList.length);
             this.inventoryCheckDetail.inventoryCheckDetailList.splice(0,this.inventoryCheckDetail.inventoryCheckDetailList.length);
@@ -651,11 +651,11 @@
             that.refresh();
             //获取盘点人列表
             $.ajax({
-                url: '/account/getAccountList',
+                url: '/account/getEmployeeList',
                 type: 'GET',
                 success: function (response) {
                     response.forEach((item) => {
-                        that.accountList.push(item);
+                        that.employeeList.push(item);
                     });
                 },
                 error:function () {
