--- a/zft-adapter/src/main/resources/templates/inventory/inventoryIn.html
+++ b/zft-adapter/src/main/resources/templates/inventory/inventoryIn.html
@@ -50,7 +50,7 @@
                     <div class="form-group" style="float: left;width: 140px;margin-right: 15px;">
                         <select class="form-control" v-model="InventoryInListQuery.inventoryInOperatorId" name="inventoryInOperatorId">
                             <option value="">全部入库人</option>
-                            <option v-for="account in accountList" :value="account.accountId">{{ account.accountName }}</option>
+                            <option v-for="employee in employeeList" :value="employee.employeeId">{{ employee.employeeName }}</option>
                         </select>
                     </div>
                     <div style="float: left;">
@@ -145,7 +145,7 @@
                     <div class="form-group" style="float: left;width: 140px;margin-right: 30px;">
                         <select class="form-control" name="inventoryInOperatorId" v-model="inventoryInAdd.inventoryInOperatorId">
                             <option value="" style="display: none">请选择入库人</option>
-                            <option v-for="account in accountList" :value="account.accountId">{{ account.accountName }}</option>
+                            <option v-for="employee in employeeList" :value="employee.employeeId">{{ employee.employeeName }}</option>
                         </select>
                     </div>
                     <p><span style="color: red">*</span> 供应商</p>
@@ -339,9 +339,9 @@
                     supplierName: '',
                 }],
                 // 入库人列表
-                accountList: [{
-                    accountId: '',
-                    accountName: '',
+                employeeList: [{
+                    employeeId: '',
+                    employeeName: '',
                 }],
                 // 入库单列表
                 inventoryInList: [{
@@ -692,7 +692,7 @@
                 // 先清空所有data的list，因为初始定义格式为一个全是空值的list
                 this.inventoryInList.splice(0, this.inventoryInList.length);
                 this.supplierList.splice(0, this.supplierList.length);
-                this.accountList.splice(0, this.accountList.length);
+                this.employeeList.splice(0, this.employeeList.length);
                 this.inventoryList.splice(0, this.inventoryList.length);
                 this.inventoryInAdd.inventoryInDetailList.splice(0, this.inventoryInAdd.inventoryInDetailList.length);
                 this.inventoryInDetail.inventoryInDetailList.splice(0,this.inventoryInDetail.inventoryInDetailList.length);
@@ -715,11 +715,11 @@
                 });
                 //获取入库人列表
                 $.ajax({
-                    url: '/account/getAccountList',
+                    url: '/account/getEmployeeList',
                     type: 'GET',
                     success: function (response) {
                         response.forEach((item) => {
-                            that.accountList.push(item);
+                            that.employeeList.push(item);
                         });
                     },
                     error:function () {
